--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@headlessui/react": "^2.2.0",
+    "@vidstack/react": "^1.12.13",
+    "bootstrap-icons": "^1.11.3",
+    "gsap": "^3.12.7",
+    "landingpage": "file:",
+    "lenis": "^1.2.3",
+    "next": "15.2.4",
+    "next-video": "^2.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "react-player": "^2.16.0",
+    "react-swipeable": "^7.0.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
