--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@headlessui/react": "^2.2.0",
+    "@studio-freight/lenis": "^1.0.42",
     "@vidstack/react": "^1.12.13",
     "bootstrap-icons": "^1.11.3",
     "gsap": "^3.12.7",
